--- a/Practica1.qmd
+++ b/Practica1.qmd
@@ -8,7 +8,6 @@ editor: visual
 
 Primer especificam totes les llibreries necessàries pel futur, llegim el data frame en format xlsx a vegades de csv, ja que el format d'aquest últim té molts errors de format.
 
-
 ```{r}
 library(ggplot2)
 library(readr)
@@ -16,7 +15,9 @@ library(readxl)
 data<-read_xlsx("estudioSatisfaccion2023.xlsx")
 
 ```
+
 A més aquí definirem algunes funcions que usarem posteriorment.
+
 ```{r}
 valors_na<-function(variable){
   return (sum(is.na(variable)))
@@ -24,11 +25,9 @@ valors_na<-function(variable){
 }
 ```
 
+(Antes d'aixo hauriem de posar cada variable en la forma que toca com character o numeric Eliminam identificacion i dates i a mes el survey_id es igual a tot)
 
-
-(Antes d'aixo hauriem de posar cara variable en la forma que toca com character o numeric Eliminam identificacion i dates i a mes el survey_id es igual a tot)
-
-Eliminarem la identificació de cada enquestat per mantenir l'anonimat i les dues variables posteriors, ja que no aporten informació. La variable "Survey_Id" la podem eliminar, ja que només existeix un valor.
+Eliminarem la identificació de cada enquestat per mantenir l'anonimat i les dues variables posteriors, ja que no aporten informació. La variable "Survey_Id" la podem eliminar també, ja que només existeix un valor.
 
 ```{r,include=FALSE}
 data.v1<-data[,-1:-4]
@@ -36,7 +35,11 @@ data.v1<-data[,-1:-4]
 
 Ara a l'haver eliminat dades innecessàries podem veure com totes les variables estan definides com a caràcter, algunes hauran de ser del tipus "numeric" per tal de poder fer càlculs amb els valors.
 
-La informació més important del data frame és la distribució de participants a través dels museus, veurem quin dels museus és el més frecuent i quin el que menys.
+```{r,include=FALSE}
+dimensions_data<-dim(data.v1)
+```
+
+La informació més important del data frame és la distribució de participants a través dels museus, veurem quin dels museus és el més frecuent i quin el que menys.En l'enquesta que esteim estodiant existeixen 1728 enquestats i 11 variables en total.
 
 (Tractament plantilla per dades de caracter com el nom del museu, podem canviar el tipus de presentacio com un violi)
 
@@ -47,12 +50,14 @@ prop_taula_frec_museus<-prop.table(taula_frec_museus)
 prop_taula_frec_museus
 ```
 
-A través d'aquesta taula podem apreciar que un 95% dels visitants provenen del museu "Història de Madrid" o "San Antonio de la Florida" amb 1178 i 467 enquestats respectivament. Amb aquesta total dominació, els grafs perden tot el valor representatiu, podem notar que qui té menys enquestats es " Castillo de Alameda" amb un 0.1% amb 2 enquestats. 
+A través d'aquesta taula podem apreciar que un 95% dels visitants provenen del museu "Història de Madrid" o "San Antonio de la Florida" amb 1178 i 467 enquestats respectivament. Amb aquesta total dominació, els grafs perden tot el valor representatiu, podem notar que qui té menys enquestats es " Castillo de Alameda" amb un 0.1% amb 2 enquestats.
 
 (Tractament per dades ordinals com les valoracions amb un histograma)
-De les variables numèriques com valoracions, es a dir, de la pregunta 2 fins la 6 ens centrarem en l'estudi de la última, ja que totes les anteriors tenen resultats similars. 
 
-Antes de l'estudi exploratori de la pregunta 6 es interesant notar com en la pregunta 5, que tracta l'adaptació a la discapacitat, molts més enquestats han decidit no contestar-la amb un total de 332, on per exemple la pregunta 2 te només uns 59.
+De les variables numèriques com valoracions, es a dir, de la pregunta 2 fins la 6 ens centrarem en l'estudi de la última, ja que totes les anteriors tenen resultats similars.
+
+Antes de l'estudi exploratori de la pregunta 6 és interesant notar com la pregunta 5, que tracta l'adaptació a la discapacitat,te molts més enquestats que han decidit no contestar-la amb un total de 332, on per exemple la pregunta 2 te només uns 59.
+
 ```{r}
 variable_2<-data.v1$`2_La recepción y atención al público`
 variable_5<-data.v1$`5_La adaptación a visitantes con discapacidad`
@@ -61,22 +66,29 @@ valors_na(variable_5)
 ```
 
 ```{r}
-prova<-table(variable_5)
-prova
-taula<-prop.table(prova)
-taula
-patata=as.numeric(variable_5)
-hist(x=patata,ylim = c(0,1500))
+taula_v_5<-table(variable_5)
+taula_v_5
+prop_taula_v_5<-prop.table(taula_v_5)
+prop_taula_v_5
+numeric_v_5=as.numeric(variable_5)
+hist(x=numeric_v_5,ylim = c(0,1000),main = "Histograma distribució nota general")
 ```
+
 Podem notar que la moda seria donar un 10 a la pregunta, al tenir un 62% de probabilitat també serà la media, a més podem calcular facilment la mitjana la qual dona un valor de 9.175
+
 ```{r}
 mean(as.numeric(na.omit(variable_5)))
 ```
 
-(Aqui un codi rapid per trobar mitjana o media, depenent del que volguem)
+Una dada típica d'enquestes seria el sexe de l'enquestat, amb un estudi superficial podem facilment veure que el genere femení manté la dominancia amb un 57.3% de pressència, el sexe masculi amb un 39.4% en segón lloc i finalment "Otro" amb un 3.2%.
 
 ```{r}
-valoracion_recepcio<-as.numeric(na.omit(data.v1$`2_La recepción y atención al público`))
-mean(valoracion_recepcio)
-median(valoracion_recepcio)
+variable_9<-data.v1$`9_¿Cuál es su sexo?`
+taula_v_9<-table(variable_9)
+pie(taula_v_9,main = "Distribució Sexes")
+```
+
+```{r,include=FALSE}
+taula_v_9
+prop.table(taula_v_9)
 ```
